# aws_ft

./: .gitignore  launch_training.py  pyproject.toml
code/: requirements.txt  train_qwen3_lora.py
data/: test_task_decomposition.json
