[project]
name = "aws-ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "modelscope>=1.32.0",
    "peft>=0.18.0",
    "python-lsp-server>=1.14.0",
    "sagemaker>=3.3.0",
    "swift>=2.36.0",
    "transformers>=4.57.3",
]

